Corrected the filtering of propositions and votes
